--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="App desenvolvido como projeto da disciplina de Laboratório de Engenharia de Software"
-    />
-    <title>Monitoramento Pet</title>
-  </head>
-  <body>
-    <noscript>É necessário habilitar o JavaScript para rodar este app.</noscript>
-    <div id="root"></div>
-  </body>
+<html lang="pt_BR" style="scroll-behavior: smooth">
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description"
+    content="App desenvolvido como projeto da disciplina de Laboratório de Engenharia de Software" />
+  <title>Monitoramento Pet</title>
+</head>
+
+<body>
+  <noscript>É necessário habilitar o JavaScript para rodar este app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
